Add address validation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ dotenv = "0.15.0"
 env_logger = "0.11.6"
 log = "0.4.22"
 regex = "1.11.1"
+validators = { version = "0.25.3", features = ["domain"]}
