--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,19 @@ name = "tree-ftp"
 version = "0.1.0"
 edition = "2021"
 
+# More information here: https://github.com/johnthagen/min-sized-rust/tree/main
+[profile.release]
+opt-level = "z"     # Optimize for size
+lto = true          # Enable link-time optimization
+codegen-units = 1   # Reduce number of codegen units to increase optimizations
+panic = "abort"     # Abort on panic
+strip = true        # Strip symbols from binary*
+
 [dependencies]
 clap = { version = "4.5.26", features = ["derive"] }
 dotenv = "0.15.0"
 env_logger = "0.11.6"
 log = "0.4.22"
-regex = "1.11.1"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.135"
 validators = { version = "0.25.3", features = ["domain"]}
