--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,10 @@ codegen-units = 1   # Reduce number of codegen units to increase optimizations
 panic = "abort"     # Abort on panic
 strip = true        # Strip symbols from binary*
 
+[lib]
+name = "tree_ftp"
+path = "src/lib.rs"
+
 [dependencies]
 clap = { version = "4.5.26", features = ["derive"] }
 dotenv = "0.15.0"
@@ -19,3 +23,6 @@ log = "0.4.22"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.135"
 validators = { version = "0.25.3", features = ["domain"]}
+
+[dev-dependencies]
+mockall = "0.13.1"
