Update derive_more dependency to specify features

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ path = "src/lib.rs"
 
 [dependencies]
 clap = { version = "4.5.26", features = ["derive"] }
-derive_more = "1.0.0"
+derive_more = { version = "=1.0.0", features = ["from"]}
 dotenv = "0.15.0"
 env_logger = "0.11.6"
 log = "0.4.22"
