--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ clap = { version = "4.5.26", features = ["derive"] }
 derive_more = { version = "=1.0.0", features = ["from"]}
 dotenv = "0.15.0"
 env_logger = "0.11.6"
+libc = "0.2.169"
 log = "0.4.22"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.135"
